exercises/operator/openshift-manifests/fe-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-dep
  labels:
    day: day3
    sample: dbapp-openshift
spec:
  replicas: 1
  selector:
    matchLabels:
      day: day3
      sample: dbapp-openshift
      layer: frontend
  template:
    metadata:
      labels:
        day: day3
        sample: dbapp-openshift
        layer: frontend
    spec:
      containers:
        - name: webserver
          image: adminer:4-standalone
