exercises/operator/openshift-manifests/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  labels:
    day: day3
    sample: dbapp-openshift
spec:
  type: ClusterIP
  selector:
    day: day3
    sample: dbapp-openshift
    layer: backend
  ports:
    - name: mysql
      port: 3306
