exercises/operator/openshift-manifests/fe-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-svc
  labels:
    day: day3
    sample: dbapp-openshift
spec:
  type: ClusterIP
  selector:
    day: day3
    sample: dbapp-openshift
    layer: frontend
  ports:
    - name: adminer
      port: 8080
