exercises/operator/openshift-manifests/fe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ingress
  labels:
    day: day3
    sample: dbapp-openshift
spec:
  rules:
    - host: whatever.custom.rwsl.in # In this training, use any unique name ending in .custom.rwsl.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe-svc
                port:
                  number: 8080
  # tls:
  #   - hosts:
  #       - whatever.custom.rwsl.in # In this training, use any unique name ending in .custom.rwsl.in
  #     secretName: webapp-tls # Secret obtained via certificate object
